# cms-kernel

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  config-sample.env  run_tests.sh
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  architecture.md
include/core/: config.hpp  kernel.hpp  logger.hpp
scripts/: build.sh  run_tests.sh  test.sh
src/: main.cpp
src/core/: config.cpp  kernel.cpp  logger.cpp
tests/: config_test.cpp  kernel_test.cpp  logger_test.cpp  sanity_test.cpp
